name:                ghc-api-compat
version:             8.2
synopsis:            Provide GHC-API compatibility with older GHC versions
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.22

library
   build-depends:
      ghc >= 8.3
   hs-source-dirs:      src
   default-language:    Haskell2010

   reexported-modules:
        GHC
      , GHC.Builtin.Names                                               as  PrelNames
      , GHC.Builtin.Names.TemplateHaskell                               as  THNames
      , GHC.Builtin.Primitive.Operations                                as  PrimOp
      , GHC.Builtin.Primitive.Types                                     as  TysPrim
      , GHC.Builtin.TypeNats                                            as  TcTypeNats
      , GHC.Builtin.Types                                               as  TysWiredIn
      , GHC.Builtin.Uniques                                             as  KnownUniques
      , GHC.Builtin.Utils                                               as  PrelInfo
      , GHC.ByteCode.Assembler                                          as  ByteCodeAsm
      , GHC.ByteCode.InfoTable                                          as  ByteCodeItbls
      , GHC.ByteCode.Instruction                                        as  ByteCodeInstr
      , GHC.ByteCode.Linker                                             as  ByteCodeLink
      , GHC.ByteCode.Types                                              as  ByteCodeTypes
      , GHC.Cmm.CommonBlockElim                                         as  CmmCommonBLockElim
      , GHC.Cmm.ConstantFolder                                          as  CmmOpt
      , GHC.Cmm.Dataflow                                                as  Hoopl
      , GHC.Cmm.Dataflow.Block                                          as  Hoopl.Block
      , GHC.Cmm.Dataflow.Collections                                    as  Hoopl.Collections
      , GHC.Cmm.Dataflow.Graph                                          as  Hoopl.Graph
      , GHC.Cmm.Dataflow.Label                                          as  Hoopl.Label
      , GHC.Cmm.Dataflow.Unique                                         as  Hoopl.Unique
      , GHC.Cmm.InfoTableBuilder                                        as  CmmBuildInfoTables
      , GHC.Cmm.LayoutStack                                             as  CmmLayoutStack
      , GHC.Cmm.Lexer                                                   as  CmmLex
      , GHC.Cmm.Lint                                                    as  CmmLint
      , GHC.Cmm.Liveness                                                as  CmmLive
      , GHC.Cmm.Parser                                                  as  CmmParse
      , GHC.Cmm.Parser.Monad                                            as  CmmMonad
      , GHC.Cmm.Pipeline                                                as  CmmPipeline
      , GHC.Cmm.Printer                                                 as  PprCmm
      , GHC.Cmm.Printer.Declaration                                     as  PprCmmDecl
      , GHC.Cmm.Printer.Expression                                      as  PprCmmExpr
      , GHC.Cmm.ProcPoint                                               as  CmmProcPoint
      , GHC.Cmm.Shortcutter                                             as  CmmContFlowOpt
      , GHC.Cmm.Sinker                                                  as  CmmSink
      , GHC.Cmm.Switch                                                  as  CmmSwitch
      , GHC.Cmm.Switch.Implement                                        as  CmmImplementSwitchPlans
      , GHC.Cmm.Syntax                                                  as  Cmm
      , GHC.Cmm.Syntax.BlockId                                          as  BlockId
      , GHC.Cmm.Syntax.CallConvention                                   as  CmmCallConv
      , GHC.Cmm.Syntax.DebugBlock                                       as  Debug
      , GHC.Cmm.Syntax.Expression                                       as  CmmExpr
      , GHC.Cmm.Syntax.Graph                                            as  MkGraph
      , GHC.Cmm.Syntax.MachinePrimOps                                   as  CmmMachOp
      , GHC.Cmm.Syntax.Node                                             as  CmmNode
      , GHC.Cmm.Syntax.Type                                             as  CmmType
      , GHC.CmmToAsm                                                    as  AsmCodeGen
      , GHC.CmmToAsm.Dwarf                                              as  Dwarf
      , GHC.CmmToAsm.Dwarf.Constants                                    as  Dwarf.Constants
      , GHC.CmmToAsm.Dwarf.Types                                        as  Dwarf.Types
      , GHC.CmmToAsm.Format                                             as  Format
      , GHC.CmmToAsm.Instruction                                        as  Instruction
      , GHC.CmmToAsm.Monad                                              as  NCGMonad
      , GHC.CmmToAsm.PIC                                                as  PIC
      , GHC.CmmToAsm.PPC.CodeGen                                        as  PPC.CodeGen
      , GHC.CmmToAsm.PPC.Cond                                           as  PPC.Cond
      , GHC.CmmToAsm.PPC.Instr                                          as  PPC.Instr
      , GHC.CmmToAsm.PPC.Ppr                                            as  PPC.Ppr
      , GHC.CmmToAsm.PPC.RegInfo                                        as  PPC.RegInfo
      , GHC.CmmToAsm.PPC.Regs                                           as  PPC.Regs
      , GHC.CmmToAsm.PrettyPrint                                        as  PprBase
      , GHC.CmmToAsm.Register.Allocator.Graph.ArchBase                  as  RegAlloc.Graph.ArchBase
      , GHC.CmmToAsm.Register.Allocator.Graph.ArchX86                   as  RegAlloc.Graph.ArchX86
      , GHC.CmmToAsm.Register.Allocator.Graph.Coalesce                  as  RegAlloc.Graph.Coalesce
      , GHC.CmmToAsm.Register.Allocator.Graph.Main                      as  RegAlloc.Graph.Main
      , GHC.CmmToAsm.Register.Allocator.Graph.Spill                     as  RegAlloc.Graph.Spill
      , GHC.CmmToAsm.Register.Allocator.Graph.SpillClean                as  RegAlloc.Graph.SpillClean
      , GHC.CmmToAsm.Register.Allocator.Graph.SpillCost                 as  RegAlloc.Graph.SpillCost
      , GHC.CmmToAsm.Register.Allocator.Graph.Stats                     as  RegAlloc.Graph.Stats
      , GHC.CmmToAsm.Register.Allocator.Graph.TrivColorable             as  RegAlloc.Graph.TrivColorable
      , GHC.CmmToAsm.Register.Allocator.Linear.Base                     as  RegAlloc.Linear.Base
      , GHC.CmmToAsm.Register.Allocator.Linear.FreeRegs                 as  RegAlloc.Linear.FreeRegs
      , GHC.CmmToAsm.Register.Allocator.Linear.JoinToTargets            as  RegAlloc.Linear.JoinToTargets
      , GHC.CmmToAsm.Register.Allocator.Linear.Main                     as  RegAlloc.Linear.Main
      , GHC.CmmToAsm.Register.Allocator.Linear.PPC.FreeRegs             as  RegAlloc.Linear.PPC.FreeRegs
      , GHC.CmmToAsm.Register.Allocator.Linear.SPARC.FreeRegs           as  RegAlloc.Linear.SPARC.FreeRegs
      , GHC.CmmToAsm.Register.Allocator.Linear.StackMap                 as  RegAlloc.Linear.StackMap
      , GHC.CmmToAsm.Register.Allocator.Linear.State                    as  RegAlloc.Linear.State
      , GHC.CmmToAsm.Register.Allocator.Linear.Stats                    as  RegAlloc.Linear.Stats
      , GHC.CmmToAsm.Register.Allocator.Linear.X86_64.FreeRegs          as  RegAlloc.Linear.X86_64.FreeRegs
      , GHC.CmmToAsm.Register.Allocator.Linear.X86.FreeRegs             as  RegAlloc.Linear.X86.FreeRegs
      , GHC.CmmToAsm.Register.Allocator.Liveness                        as  RegAlloc.Liveness
      , GHC.CmmToAsm.Register                                           as  Reg
      , GHC.CmmToAsm.Register.Class                                     as  RegClass
      , GHC.CmmToAsm.Register.Target                                    as  TargetReg
      , GHC.CmmToAsm.SPARC.AddrMode                                     as  SPARC.AddrMode
      , GHC.CmmToAsm.SPARC.Base                                         as  SPARC.Base
      , GHC.CmmToAsm.SPARC.CodeGen.Amode                                as  SPARC.CodeGen.Amode
      , GHC.CmmToAsm.SPARC.CodeGen                                      as  SPARC.CodeGen
      , GHC.CmmToAsm.SPARC.CodeGen.Base                                 as  SPARC.CodeGen.Base
      , GHC.CmmToAsm.SPARC.CodeGen.CondCode                             as  SPARC.CodeGen.CondCode
      , GHC.CmmToAsm.SPARC.CodeGen.Expand                               as  SPARC.CodeGen.Expand
      , GHC.CmmToAsm.SPARC.CodeGen.Gen32                                as  SPARC.CodeGen.Gen32
      , GHC.CmmToAsm.SPARC.CodeGen.Gen64                                as  SPARC.CodeGen.Gen64
      , GHC.CmmToAsm.SPARC.CodeGen.Sanity                               as  SPARC.CodeGen.Sanity
      , GHC.CmmToAsm.SPARC.Cond                                         as  SPARC.Cond
      , GHC.CmmToAsm.SPARC.Imm                                          as  SPARC.Imm
      , GHC.CmmToAsm.SPARC.Instr                                        as  SPARC.Instr
      , GHC.CmmToAsm.SPARC.Ppr                                          as  SPARC.Ppr
      , GHC.CmmToAsm.SPARC.Regs                                         as  SPARC.Regs
      , GHC.CmmToAsm.SPARC.ShortcutJump                                 as  SPARC.ShortcutJump
      , GHC.CmmToAsm.SPARC.Stack                                        as  SPARC.Stack
      , GHC.CmmToAsm.X86.CodeGen                                        as  X86.CodeGen
      , GHC.CmmToAsm.X86.Cond                                           as  X86.Cond
      , GHC.CmmToAsm.X86.Instr                                          as  X86.Instr
      , GHC.CmmToAsm.X86.Ppr                                            as  X86.Ppr
      , GHC.CmmToAsm.X86.RegInfo                                        as  X86.RegInfo
      , GHC.CmmToAsm.X86.Regs                                           as  X86.Regs
      , GHC.CmmToC                                                      as  PprC
      , GHC.CmmToLlvm                                                   as  Llvm
      , GHC.CmmToLlvm.CodeGen                                           as  LlvmCodeGen
      , GHC.CmmToLlvm.CodeGen.Base                                      as  LlvmCodeGen.Base
      , GHC.CmmToLlvm.CodeGen.Data                                      as  LlvmCodeGen.Data
      , GHC.CmmToLlvm.CodeGen.PrettyPrint                               as  LlvmCodeGen.Ppr
      , GHC.CmmToLlvm.CodeGen.Proc                                      as  LlvmCodeGen.CodeGen
      , GHC.CmmToLlvm.CodeGen.Regs                                      as  LlvmCodeGen.Regs
      , GHC.CmmToLlvm.Fixup                                             as  LlvmMangler
      , GHC.Cmm.Utils                                                   as  CmmUtils
      , GHC.Config.Constants                                            as  Constants
      , GHC.Config.Flags                                                as  DynFlags
      , GHC.Config.Flags.Fingerprint                                    as  FlagChecker
      , GHC.Config.Hooks                                                as  Hooks
      , GHC.Config.HostPlatform                                         as  PlatformConstants
      , GHC.Core.Arity                                                  as  CoreArity
      , GHC.Core.CallArity                                              as  CallArity
      , GHC.Core.CommonSubExpr                                          as  CSE
      , GHC.Core.ConstantFold                                           as  PrelRules
      , GHC.Core.Demand                                                 as  DmdAnal
      , GHC.Core.FloatIn                                                as  FloatIn
      , GHC.Core.FloatOut                                               as  FloatOut
      , GHC.Core.FreeVars                                               as  CoreFVs
      , GHC.Core.Inliner                                                as  CoreUnfold
      , GHC.Core.LevelSet                                               as  SetLevels
      , GHC.Core.LiberateCase                                           as  LiberateCase
      , GHC.Core.Lint                                                   as  CoreLint
      , GHC.Core.Monad                                                  as  CoreMonad
      , GHC.Core.Occurence                                              as  OccurAnal
      , GHC.Core.Pipeline                                               as  SimplCore
      , GHC.Core.Prepare                                                as  CorePrep
      , GHC.Core.Printer                                                as  PprCore
      , GHC.Core.Rules                                                  as  Rules
      , GHC.Core.SimpleOpt                                              as  CoreOpt
      , GHC.Core.Simplify                                               as  Simplify
      , GHC.Core.Simplify.Environment                                   as  SimplEnv
      , GHC.Core.Simplify.Monad                                         as  SimplMonad
      , GHC.Core.Simplify.Utils                                         as  SimplUtils
      , GHC.Core.Specialise                                             as  Specialise
      , GHC.Core.Specialise.Constructor                                 as  SpecConstr
      , GHC.Core.StaticArgument                                         as  SAT
      , GHC.Core.Stats                                                  as  CoreStats
      , GHC.Core.Subst                                                  as  CoreSubst
      , GHC.Core.Syntax                                                 as  CoreSyn
      , GHC.Core.Syntax.Force                                           as  CoreSeq
      , GHC.Core.Syntax.Make                                            as  MkCore
      , GHC.Core.Tidy                                                   as  CoreTidy
      , GHC.CoreToByteCode                                              as  ByteCodeGen
      , GHC.CoreToInterface                                             as  ToIface
      , GHC.CoreToStg                                                   as  CoreToStg
      , GHC.CoreTypes.Annotation                                        as  Annotations
      , GHC.CoreTypes.Available                                         as  Avail
      , GHC.CoreTypes.Base                                              as  HscTypes
      , GHC.CoreTypes.BasicTypes                                        as  BasicTypes
      , GHC.CoreTypes.CLabel                                            as  CLabel
      , GHC.CoreTypes.Class                                             as  Class
      , GHC.CoreTypes.Coercion                                          as  Coercion
      , GHC.CoreTypes.Coercion.Axiom                                    as  CoAxiom
      , GHC.CoreTypes.Coercion.Optimise                                 as  OptCoercion
      , GHC.CoreTypes.ConLike                                           as  ConLike
      , GHC.CoreTypes.CostCentre                                        as  CostCentre
      , GHC.CoreTypes.CostCentre.Init                                   as  ProfInit
      , GHC.CoreTypes.DataCon                                           as  DataCon
      , GHC.CoreTypes.Demand                                            as  Demand
      , GHC.CoreTypes.FamilyInstance                                    as  FamInstEnv
      , GHC.CoreTypes.FieldLabel                                        as  FieldLabel
      , GHC.CoreTypes.ForeignCall                                       as  ForeignCall
      , GHC.CoreTypes.Id                                                as  Id
      , GHC.CoreTypes.Id.Info                                           as  IdInfo
      , GHC.CoreTypes.Id.Make                                           as  MkId
      , GHC.CoreTypes.Instance                                          as  InstEnv
      , GHC.CoreTypes.Kind                                              as  Kind
      , GHC.CoreTypes.Literal                                           as  Literal
      , GHC.CoreTypes.Module                                            as  Module
      , GHC.CoreTypes.Name                                              as  Name
      , GHC.CoreTypes.Name.Cache                                        as  NameCache
      , GHC.CoreTypes.Name.Environment                                  as  NameEnv
      , GHC.CoreTypes.Name.Set                                          as  NameSet
      , GHC.CoreTypes.NameShape                                         as  NameShape
      , GHC.CoreTypes.OccName                                           as  OccName
      , GHC.CoreTypes.PatternSynonym                                    as  PatSyn
      , GHC.CoreTypes.RdrName                                           as  RdrName
      , GHC.CoreTypes.RepType                                           as  RepType
      , GHC.CoreTypes.SrcLoc                                            as  SrcLoc
      , GHC.CoreTypes.TyCon                                             as  TyCon
      , GHC.CoreTypes.Type                                              as  Type
      , GHC.CoreTypes.Type.Internal                                     as  TyCoRep
      , GHC.CoreTypes.Type.Unify                                        as  Unify
      , GHC.CoreTypes.Var                                               as  Var
      , GHC.CoreTypes.Var.Environment                                   as  VarEnv
      , GHC.CoreTypes.Var.Free                                          as  FV
      , GHC.CoreTypes.Var.Set                                           as  VarSet
      , GHC.CoreTypes.Var.UndirectedGraph                               as  UnVarGraph
      , GHC.Core.Utils                                                  as  CoreUtils
      , GHC.Core.Vectorise                                              as  Vectorise
      , GHC.Core.Vectorise.Builtins                                     as  Vectorise.Builtins
      , GHC.Core.Vectorise.Builtins.Base                                as  Vectorise.Builtins.Base
      , GHC.Core.Vectorise.Builtins.Initialise                          as  Vectorise.Builtins.Initialise
      , GHC.Core.Vectorise.Convert                                      as  Vectorise.Convert
      , GHC.Core.Vectorise.Env                                          as  Vectorise.Env
      , GHC.Core.Vectorise.Exp                                          as  Vectorise.Exp
      , GHC.Core.Vectorise.Generic.Description                          as  Vectorise.Generic.Description
      , GHC.Core.Vectorise.Generic.PADict                               as  Vectorise.Generic.PADict
      , GHC.Core.Vectorise.Generic.PAMethods                            as  Vectorise.Generic.PAMethods
      , GHC.Core.Vectorise.Generic.PData                                as  Vectorise.Generic.PData
      , GHC.Core.Vectorise.Monad                                        as  Vectorise.Monad
      , GHC.Core.Vectorise.Monad.Base                                   as  Vectorise.Monad.Base
      , GHC.Core.Vectorise.Monad.Global                                 as  Vectorise.Monad.Global
      , GHC.Core.Vectorise.Monad.InstEnv                                as  Vectorise.Monad.InstEnv
      , GHC.Core.Vectorise.Monad.Local                                  as  Vectorise.Monad.Local
      , GHC.Core.Vectorise.Monad.Naming                                 as  Vectorise.Monad.Naming
      , GHC.Core.Vectorise.Type.Classify                                as  Vectorise.Type.Classify
      , GHC.Core.Vectorise.Type.Env                                     as  Vectorise.Type.Env
      , GHC.Core.Vectorise.Type.TyConDecl                               as  Vectorise.Type.TyConDecl
      , GHC.Core.Vectorise.Type.Type                                    as  Vectorise.Type.Type
      , GHC.Core.Vectorise.Utils                                        as  Vectorise.Utils
      , GHC.Core.Vectorise.Utils.Base                                   as  Vectorise.Utils.Base
      , GHC.Core.Vectorise.Utils.Closure                                as  Vectorise.Utils.Closure
      , GHC.Core.Vectorise.Utils.Hoisting                               as  Vectorise.Utils.Hoisting
      , GHC.Core.Vectorise.Utils.PADict                                 as  Vectorise.Utils.PADict
      , GHC.Core.Vectorise.Utils.Poly                                   as  Vectorise.Utils.Poly
      , GHC.Core.Vectorise.Var                                          as  Vectorise.Var
      , GHC.Core.WorkerWrap                                             as  WorkWrap
      , GHC.Core.WorkerWrap.Utils                                       as  WwLib
      , GHC.Data.Bag                                                    as  Bag
      , GHC.Data.Bitmap                                                 as  Bitmap
      , GHC.Data.BoolFormula                                            as  BooleanFormula
      , GHC.Data.Char.Classification                                    as  Ctype
      , GHC.Data.Char.Encoding                                          as  Encoding
      , GHC.Data.EnumSet                                                as  EnumSet
      , GHC.Data.FastMutableInt                                         as  FastMutInt
      , GHC.Data.FastString                                             as  FastString
      , GHC.Data.FastString.Environment                                 as  FastStringEnv
      , GHC.Data.FiniteMap                                              as  FiniteMap
      , GHC.Data.Graph.Base                                             as  GraphBase
      , GHC.Data.Graph.Color                                            as  GraphColor
      , GHC.Data.Graph.Directed                                         as  Digraph
      , GHC.Data.Graph.Operations                                       as  GraphOps
      , GHC.Data.Graph.PrettyPrint                                      as  GraphPpr
      , GHC.Data.List.SetOps                                            as  ListSetOps
      , GHC.Data.Maybe                                                  as  Maybes
      , GHC.Data.OrdList                                                as  OrdList
      , GHC.Data.Pair                                                   as  Pair
      , GHC.Data.Stream                                                 as  Stream
      , GHC.Data.StringBuffer                                           as  StringBuffer
      , GHC.Data.TrieMap                                                as  TrieMap
      , GHC.Data.UniqueDFM                                              as  UniqDFM
      , GHC.Data.UniqueDSet                                             as  UniqDSet
      , GHC.Data.UniqueFM                                               as  UniqFM
      , GHC.Data.UniqueMap                                              as  UniqMap
      , GHC.Data.UniqueSet                                              as  UniqSet
      , GHC.Data.UniqueSupply                                           as  UniqSupply
      , GHC.Driver.Backpack.Main                                        as  DriverBkp
      , GHC.Driver.Backpack.Syntax                                      as  BkpSyn
      , GHC.Driver.CmdLineParser                                        as  CmdLineParser
      , GHC.Driver.CodeOutput                                           as  CodeOutput
      , GHC.Driver.Finder                                               as  Finder
      , GHC.Driver.Main                                                 as  HscMain
      , GHC.Driver.Make                                                 as  GhcMake
      , GHC.Driver.MakeDepend                                           as  DriverMkDepend
      , GHC.Driver.Phases                                               as  DriverPhases
      , GHC.Driver.Pipeline                                             as  DriverPipeline
      , GHC.Driver.Pipeline.Monad                                       as  PipelineMonad
      , GHC.Haskell.Derive.BasicClasses                                 as  TcGenDeriv
      , GHC.Haskell.Derive.Constraints                                  as  TcDerivInfer
      , GHC.Haskell.Derive.Functor                                      as  TcGenFunctor
      , GHC.Haskell.Derive.Generic                                      as  TcGenGenerics
      , GHC.Haskell.Derive.Typeable                                     as  TcTypeable
      , GHC.Haskell.Derive.Utils                                        as  TcDerivUtils
      , GHC.Haskell.Lexer                                               as  Lexer
      , GHC.Haskell.Parser                                              as  Parser
      , GHC.Haskell.Parser.HeaderInfo                                   as  HeaderInfo
      , GHC.Haskell.Parser.Syntax                                       as  RdrHsSyn
      , GHC.Haskell.Parser.Utils                                        as  HaddockUtils
      , GHC.Haskell.Printer.Dump                                        as  HsDumpAst
      , GHC.Haskell.Rename                                              as  RnSource
      , GHC.Haskell.Rename.Bind                                         as  RnBinds
      , GHC.Haskell.Rename.Documentation                                as  RnHsDoc
      , GHC.Haskell.Rename.Environment                                  as  RnEnv
      , GHC.Haskell.Rename.Expression                                   as  RnExpr
      , GHC.Haskell.Rename.Fixity                                       as  RnFixity
      , GHC.Haskell.Rename.ImportExport                                 as  RnNames
      , GHC.Haskell.Rename.Pattern                                      as  RnPat
      , GHC.Haskell.Rename.Splice                                       as  RnSplice
      , GHC.Haskell.Rename.Type                                         as  RnTypes
      , GHC.Haskell.Rename.Utils                                        as  RnUtils
      , GHC.Haskell.Rename.Utils.Unbound                                as  RnUnbound
      , GHC.Haskell.Stats                                               as  HscStats
      , GHC.Haskell.Syntax.Annotation                                   as  ApiAnnotation
      , GHC.Haskell.Syntax                                              as  HsSyn
      , GHC.Haskell.Syntax.Bind                                         as  HsBinds
      , GHC.Haskell.Syntax.Declaration                                  as  HsDecls
      , GHC.Haskell.Syntax.Documentation                                as  HsDoc
      , GHC.Haskell.Syntax.Expression                                   as  HsExpr
      , GHC.Haskell.Syntax.Extension                                    as  HsExtension
      , GHC.Haskell.Syntax.ImportExport                                 as  HsImpExp
      , GHC.Haskell.Syntax.Literal                                      as  HsLit
      , GHC.Haskell.Syntax.Pattern                                      as  HsPat
      , GHC.Haskell.Syntax.PlaceHolder                                  as  PlaceHolder
      , GHC.Haskell.Syntax.Type                                         as  HsTypes
      , GHC.Haskell.Template                                            as  Convert
      , GHC.HaskellToCore.Arrow                                         as  DsArrows
      , GHC.HaskellToCore                                               as  Desugar
      , GHC.HaskellToCore.Bind                                          as  DsBinds
      , GHC.HaskellToCore.Coverage                                      as  Coverage
      , GHC.HaskellToCore.Expression                                    as  DsExpr
      , GHC.HaskellToCore.Foreign.Call                                  as  DsCCall
      , GHC.HaskellToCore.Foreign.Declaration                           as  DsForeign
      , GHC.HaskellToCore.GuardedRHS                                    as  DsGRHSs
      , GHC.HaskellToCore.ListComp                                      as  DsListComp
      , GHC.HaskellToCore.Match                                         as  Match
      , GHC.HaskellToCore.Match.Check                                   as  Check
      , GHC.HaskellToCore.Match.Constructor                             as  MatchCon
      , GHC.HaskellToCore.Match.Expression                              as  PmExpr
      , GHC.HaskellToCore.Match.Literal                                 as  MatchLit
      , GHC.HaskellToCore.Match.TermEqOracle                            as  TmOracle
      , GHC.HaskellToCore.Monad                                         as  DsMonad
      , GHC.HaskellToCore.Splice                                        as  DsMeta
      , GHC.HaskellToCore.Usage                                         as  DsUsage
      , GHC.HaskellToCore.Utils                                         as  DsUtils
      , GHC.Haskell.TypeCheck.Annotation                                as  TcAnnotations
      , GHC.Haskell.TypeCheck.Arrow                                     as  TcArrows
      , GHC.Haskell.TypeCheck.Bind                                      as  TcBinds
      , GHC.Haskell.TypeCheck.Class                                     as  TcClassDcl
      , GHC.Haskell.TypeCheck.Default                                   as  TcDefaults
      , GHC.Haskell.TypeCheck.Deriving                                  as  TcDeriv
      , GHC.Haskell.TypeCheck.Environment                               as  TcEnv
      , GHC.Haskell.TypeCheck.Error                                     as  TcErrors
      , GHC.Haskell.TypeCheck.Evidence                                  as  TcEvidence
      , GHC.Haskell.TypeCheck.Export                                    as  TcRnExports
      , GHC.Haskell.TypeCheck.Expression                                as  TcExpr
      , GHC.Haskell.TypeCheck.FamilyInstance                            as  FamInst
      , GHC.Haskell.TypeCheck.Foreign                                   as  TcForeign
      , GHC.Haskell.TypeCheck.FunctionalDependency                      as  FunDeps
      , GHC.Haskell.TypeCheck.Instance                                  as  TcInstDcls
      , GHC.Haskell.TypeCheck.Instantiation                             as  Inst
      , GHC.Haskell.TypeCheck.Match                                     as  TcMatches
      , GHC.Haskell.TypeCheck.Module                                    as  TcRnDriver
      , GHC.Haskell.TypeCheck.ModuleSignature                           as  TcBackpack
      , GHC.Haskell.TypeCheck.Monad                                     as  TcRnMonad
      , GHC.Haskell.TypeCheck.Pattern                                   as  TcPat
      , GHC.Haskell.TypeCheck.PatternSynonym                            as  TcPatSyn
      , GHC.Haskell.TypeCheck.Rule                                      as  TcRules
      , GHC.Haskell.TypeCheck.Signature                                 as  TcSigs
      , GHC.Haskell.TypeCheck.Simplify                                  as  TcSimplify
      , GHC.Haskell.TypeCheck.Solver.Canonicalise                       as  TcCanonical
      , GHC.Haskell.TypeCheck.Solver.Flatten                            as  TcFlatten
      , GHC.Haskell.TypeCheck.Solver.Interact                           as  TcInteract
      , GHC.Haskell.TypeCheck.Solver.Monad                              as  TcSMonad
      , GHC.Haskell.TypeCheck.Splice                                    as  TcSplice
      , GHC.Haskell.TypeCheck.Syntax                                    as  TcHsSyn
      , GHC.Haskell.TypeCheck.Type                                      as  TcHsType
      , GHC.Haskell.TypeCheck.TypeDecl                                  as  TcTyClsDecls
      , GHC.Haskell.TypeCheck.TypeDeclUtil                              as  TcTyDecls
      , GHC.Haskell.TypeCheck.Unify                                     as  TcUnify
      , GHC.Haskell.TypeCheck.Util                                      as  TcRnTypes
      , GHC.Haskell.TypeCheck.Util.CoreType                             as  TcType
      , GHC.Haskell.TypeCheck.Util.Monadic                              as  TcMType
      , GHC.Haskell.TypeCheck.Validity                                  as  TcValidity
      , GHC.Haskell.Utils                                               as  HsUtils
      , GHC.Interactive.ClosureInspect                                  as  RtClosureInspect
      , GHC.Interactive.Debugger                                        as  Debugger
      , GHC.Interactive.Debugger.Utils                                  as  DebuggerUtils
      , GHC.Interactive.DynamicLoading                                  as  DynamicLoading
      , GHC.Interactive.Eval                                            as  InteractiveEval
      , GHC.Interactive.Interpreter                                     as  GHCi
      , GHC.Interactive.Linker                                          as  Linker
      , GHC.Interactive.Types                                           as  InteractiveEvalTypes
      , GHC.Interface.Binary                                            as  BinIface
      , GHC.Interface.BuildTypeAndClass                                 as  BuildTyCl
      , GHC.Interface.Environment                                       as  IfaceEnv
      , GHC.Interface.Load                                              as  LoadIface
      , GHC.Interface.Rename                                            as  RnModIface
      , GHC.Interface.Syntax                                            as  IfaceSyn
      , GHC.Interface.Tidy                                              as  TidyPgm
      , GHC.Interface.Type                                              as  IfaceType
      , GHC.Interface.TypeCheck                                         as  TcIface
      , GHC.Interface.Utils                                             as  MkIface
      , GHC.Llvm.MetaData                                               as  Llvm.MetaData
      , GHC.Llvm.Printer                                                as  Llvm.PpLlvm
      , GHC.Llvm.Syntax                                                 as  Llvm.AbsSyn
      , GHC.Llvm.Types                                                  as  Llvm.Types
      , GHC.Monad                                                       as  GhcMonad
      , GHC.Packages                                                    as  Packages
      , GHC.Packages.PackageConfig                                      as  PackageConfig
      , GHC.Plugin                                                      as  GhcPlugins
      , GHC.Plugin.TypeChecker                                          as  TcPluginM
      , GHC.Plugin.Types                                                as  Plugins
      , GHC.RTS.InfoTable                                               as  CmmInfo
      , GHC.RTS.Storage                                                 as  SMRep
      , GHC.Stg.CommonSubExpr                                           as  StgCse
      , GHC.Stg.CostCentreCollect                                       as  SCCfinal
      , GHC.Stg.Lint                                                    as  StgLint
      , GHC.Stg.Pipeline                                                as  SimplStg
      , GHC.Stg.Stats                                                   as  StgStats
      , GHC.Stg.Syntax                                                  as  StgSyn
      , GHC.StgToCmm.ArgRep                                             as  StgCmmArgRep
      , GHC.StgToCmm                                                    as  StgCmm
      , GHC.StgToCmm.Bind                                               as  StgCmmBind
      , GHC.StgToCmm.Closure                                            as  StgCmmClosure
      , GHC.StgToCmm.Constructor                                        as  StgCmmCon
      , GHC.StgToCmm.Coverage                                           as  StgCmmHpc
      , GHC.StgToCmm.Environment                                        as  StgCmmEnv
      , GHC.StgToCmm.Expression                                         as  StgCmmExpr
      , GHC.StgToCmm.ForeignCall                                        as  StgCmmForeign
      , GHC.StgToCmm.Heap                                               as  StgCmmHeap
      , GHC.StgToCmm.Layout                                             as  StgCmmLayout
      , GHC.StgToCmm.Monad                                              as  StgCmmMonad
      , GHC.StgToCmm.Monad.Extended                                     as  StgCmmExtCode
      , GHC.StgToCmm.PrimOp                                             as  StgCmmPrim
      , GHC.StgToCmm.Profiling                                          as  StgCmmProf
      , GHC.StgToCmm.Profiling.Ticky                                    as  StgCmmTicky
      , GHC.StgToCmm.Utils                                              as  StgCmmUtils
      , GHC.Stg.Unarise                                                 as  UnariseStg
      , GHC.Stg.Utils                                                   as  CgUtils
      , GHC.Util                                                        as  Util
      , GHC.Util.Assembler                                              as  AsmUtils
      , GHC.Util.Binary                                                 as  Binary
      , GHC.Util.Binary.Fingerprint                                     as  BinFingerprint
      , GHC.Util.CodeGen.Platform.ARM64                                 as  CodeGen.Platform.ARM64
      , GHC.Util.CodeGen.Platform.ARM                                   as  CodeGen.Platform.ARM
      , GHC.Util.CodeGen.Platform                                       as  CodeGen.Platform
      , GHC.Util.CodeGen.Platform.NoRegs                                as  CodeGen.Platform.NoRegs
      , GHC.Util.CodeGen.Platform.PPC                                   as  CodeGen.Platform.PPC
      , GHC.Util.CodeGen.Platform.PPC_Darwin                            as  CodeGen.Platform.PPC_Darwin
      , GHC.Util.CodeGen.Platform.SPARC                                 as  CodeGen.Platform.SPARC
      , GHC.Util.CodeGen.Platform.X86_64                                as  CodeGen.Platform.X86_64
      , GHC.Util.CodeGen.Platform.X86                                   as  CodeGen.Platform.X86
      , GHC.Util.CodeGen.Primitive                                      as  CPrim
      , GHC.Util.CodeGen.StaticPtrTable                                 as  StaticPtrTable
      , GHC.Util.Elf                                                    as  Elf
      , GHC.Util.Error                                                  as  ErrUtils
      , GHC.Util.Exception                                              as  Exception
      , GHC.Util.FileCleanup                                            as  FileCleanup
      , GHC.Util.Fingerprint                                            as  Fingerprint
      , GHC.Util.Handle.BufferedWrite                                   as  BufWrite
      , GHC.Util.IO.Unsafe                                              as  FastFunctions
      , GHC.Util.Json                                                   as  Json
      , GHC.Util.Lexeme                                                 as  Lexeme
      , GHC.Util.Monad                                                  as  MonadUtils
      , GHC.Util.Monad.IOEnv                                            as  IOEnv
      , GHC.Util.Monad.ListT                                            as  ListT
      , GHC.Util.Monad.State                                            as  State
      , GHC.Util.Outputable                                             as  Outputable
      , GHC.Util.Panic                                                  as  Panic
      , GHC.Util.Platform                                               as  Platform
      , GHC.Util.PrettyPrint                                            as  Pretty
      , GHC.Util.PrettyPrint.Colour                                     as  PprColour
      , GHC.Util.PrettyPrint.TyThing                                    as  PprTyThing
      , GHC.Util.SysTools                                               as  SysTools
      , GHC.Util.SysTools.Terminal                                      as  SysTools.Terminal
